[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu/simhei.tres" type="DynamicFont" id=1]
[ext_resource path="res://Audio/遺サレタ場所／斜光.wav" type="AudioStream" id=2]
[ext_resource path="res://Menu/Menu.gd" type="Script" id=3]
[ext_resource path="res://Audio/遺サレタ場所／斜光 8bit.wav" type="AudioStream" id=4]

[node name="Menu" type="Node"]
script = ExtResource( 3 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Main" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="one" type="LinkButton" parent="UI/Main"]
anchor_left = 0.4
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
custom_fonts/font = ExtResource( 1 )
text = "遺サレタ場所／斜光"
underline = 1

[node name="MusicList" type="Node" parent="."]

[node name="Music1" type="AudioStreamPlayer" parent="MusicList"]
stream = ExtResource( 2 )

[node name="Music1_8" type="AudioStreamPlayer" parent="MusicList"]
stream = ExtResource( 4 )

[connection signal="pressed" from="UI/Main/one" to="." method="_on_one_pressed"]
